[gd_scene load_steps=2 format=3 uid="uid://dbvtidcl1hglw"]

[ext_resource type="Script" path="res://my_slider.gd" id="1_x21dn"]

[node name="MySlider" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 248.0
offset_bottom = 33.0
script = ExtResource("1_x21dn")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Label:"

[node name="Slider" type="HSlider" parent="."]
layout_mode = 1
offset_left = 65.0
offset_right = 185.0
offset_bottom = 25.0

[node name="Value" type="Label" parent="."]
layout_mode = 0
offset_left = 200.0
offset_right = 240.0
offset_bottom = 26.0
text = "0.0
"

[connection signal="drag_ended" from="Slider" to="." method="_on_slider_drag_ended"]
[connection signal="drag_started" from="Slider" to="." method="_on_slider_drag_started"]
[connection signal="value_changed" from="Slider" to="." method="_on_slider_value_changed"]
